--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Apps</title>
+    <title>Search Your Movie</title>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"/>
     <!-- Stylesheet -->
@@ -15,11 +15,13 @@
 <body>
     <div class="container">
         <div class="search-container">
-            <input type="text" placeholder="Enter Movie Name Here..." id="movie-name" value="dark knight"/>
+            <input type="text" placeholder="Enter Movie Name Here..." id="movie-name" value="iron man"/>
             <button id="search-btn">Search</button>
         </div>
         <div id="result"></div>
     </div>
+
+    
     <script src="key.js"></script>
     <script src="script.js"></script>
 </body>
